--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Hello there!</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <div class="main">
@@ -52,5 +52,5 @@
 
       </div>
     </div>
-  <script type="text/javascript" src="main.js"></script></body>
+  </body>
 </html>
